:sparkles: (⚛️ Frontend) add styles to match framework colors

--- a/client/src/containers/receipt/Receipt-Body/receipt-body.css
+++ b/client/src/containers/receipt/Receipt-Body/receipt-body.css
@@ -1,8 +1,12 @@
+.Receipt-Container {
+	background-color: #f5f6fa;
+	border-radius: 30px;
+	height: 100vh;
+}
+
 .Receipt-Body {
-	background-color: rgb(241, 209, 209);
 	margin-left: 1em;
 	margin-right: 1em;
-	border-radius: 20px;
 }
 
 .Company-Details {
@@ -13,17 +17,19 @@
 .Company-Name {
 	font-weight: bold;
 	margin-bottom: 0;
+	margin-top: 0.4em;
+	color: #3d3232;
 }
 
 .Company-Logo {
 	color: rgb(245, 164, 89);
 	font-weight: bold;
 	margin-bottom: 0;
+	margin-top: 0.4em;
 }
 
 .Time-Container {
 	display: flex;
-	background-color: bisque;
 	justify-content: space-between;
 	padding: 0;
 	margin-bottom: 0.5em;
@@ -33,6 +39,7 @@
 	font-size: xx-small;
 	margin-top: 0%;
 	font-weight: 500;
+	color: #a1a1a1;
 }
 
 .Circle {
@@ -52,7 +59,7 @@
 	font-size: x-small;
 	margin-left: 0.7em;
 	margin-right: 0.7em;
-	font-weight: 500;
+	font-weight: 600;
 	color: #248cce;
 }
 
@@ -60,7 +67,23 @@
 	background: white;
 	border-radius: 8px;
 	max-height: 5em;
+	min-height: 5em;
 	margin-bottom: 0.5em;
+	overflow-y: auto;
+}
+/* Styles to make scrollbar always visilble */
+.Item-List-Container::-webkit-scrollbar {
+	-webkit-appearance: none;
+}
+
+.Item-List-Container::-webkit-scrollbar:vertical {
+	width: 10px;
+}
+
+.Item-List-Container::-webkit-scrollbar-thumb {
+	border-radius: 8px;
+	border: 2px solid white;
+	background-color: #ebedfd;
 }
 
 .List {
@@ -84,7 +107,17 @@
 	font-weight: bold;
 	max-width: 4em;
 	min-width: 6em;
+	min-height: 2.8em;
 	padding: 0.2em;
+	color: #3d3232;
+}
+
+.Total-Title {
+	line-height: 1.2em;
+}
+
+.Total-Price {
+	line-height: 1em;
 }
 
 .Receipt-Id {
@@ -105,26 +138,54 @@
 	background: white;
 	font-size: small;
 	margin-bottom: 0.5em;
+	padding: 0.3em;
 }
 
-.Receipt-Saved-Message {
+.Receipt-Saved-Text {
 	display: flex;
 	flex-direction: column;
-	background: rgb(139, 205, 236);
 	padding: 0;
 	margin-bottom: 0.5em;
 	align-items: center;
 }
 
-.Tick {
-	width: 80px;
+.Tick-Container {
+	display: inline-block;
+	background-color: rgb(254, 254, 254);
+	width: 70px;
+	height: 70px;
 	line-height: 80px;
 	border-radius: 50%;
+	vertical-align: middle;
 	text-align: center;
+}
+
+.Tick {
+	color: #18ddba;
 	font-size: 70px;
-	background: #e3f5e4;
 }
 
 .Saved-Message {
 	font-size: small;
+}
+
+.List-Button {
+	display: flex;
+	justify-content: center;
+}
+
+.Button-Text {
+	background-color: #1fc2c2;
+	padding: 0 1.25rem;
+	line-height: 2.125rem;
+	font-size: 0.875rem;
+	font-weight: 400;
+	text-align: center;
+	margin: 0.125rem;
+	color: white;
+
+	border-radius: 30px;
+
+	transition: color 0.125s ease;
+	cursor: pointer;
 }
