--- a/client/src/containers/receipt/header/header.css
+++ b/client/src/containers/receipt/header/header.css
@@ -3,7 +3,8 @@
 
 .Header-Title {
 	text-align: center;
-	background: #8dce24;
 	font-weight: 500;
-	margin: 1em;
+	margin-top: 1em;
+	margin-bottom: 2em;
+	color: white;
 }
