--- a/client/src/containers/receipt/Receipt-Body/receipt-body.css
+++ b/client/src/containers/receipt/Receipt-Body/receipt-body.css
@@ -17,7 +17,7 @@
 .Company-Name {
 	font-weight: bold;
 	margin-bottom: 0;
-	margin-top: 0.4em;
+	margin-top: 0.8em;
 	color: #3d3232;
 }
 
@@ -25,7 +25,7 @@
 	color: rgb(245, 164, 89);
 	font-weight: bold;
 	margin-bottom: 0;
-	margin-top: 0.4em;
+	margin-top: 0.8em;
 }
 
 .Time-Container {
@@ -42,15 +42,22 @@
 	color: #a1a1a1;
 }
 
-.Circle {
-	width: 25px;
+.Shop-Icon-Circle {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
 	line-height: 25px;
 	border-radius: 50%;
-	text-align: center;
-	font-size: 20px;
-	background: #e2e2e2;
+	background: #f5f6fa;
 	margin-right: 2em;
 	margin-top: 0;
+	vertical-align: middle;
+	text-align: center;
+	list-style: none;
+}
+
+.Shop-Icon {
+	font-size: 25px;
 }
 
 .Item-List-Titles {
@@ -68,7 +75,7 @@
 	border-radius: 8px;
 	max-height: 5em;
 	min-height: 5em;
-	margin-bottom: 0.5em;
+	margin-bottom: 1em;
 	overflow-y: auto;
 }
 /* Styles to make scrollbar always visilble */
@@ -95,7 +102,7 @@
 .Total-Container {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 0.5em;
+	margin-bottom: 1em;
 }
 
 .Price-Container {
@@ -137,7 +144,7 @@
 	border-radius: 8px;
 	background: white;
 	font-size: small;
-	margin-bottom: 0.5em;
+	margin-bottom: 1em;
 	padding: 0.3em;
 }
 
@@ -145,7 +152,7 @@
 	display: flex;
 	flex-direction: column;
 	padding: 0;
-	margin-bottom: 0.5em;
+	margin-bottom: 1em;
 	align-items: center;
 }
 
@@ -188,4 +195,8 @@
 
 	transition: color 0.125s ease;
 	cursor: pointer;
+
+	box-shadow: 0px 0px 0px transparent;
+	border: 0px solid transparent;
+	text-shadow: 0px 0px 0px transparent;
 }
