--- a/client/src/components/Receipt/ReceiptListItem/ReceiptListItem.css
+++ b/client/src/components/Receipt/ReceiptListItem/ReceiptListItem.css
@@ -16,7 +16,10 @@
 	display: flex;
 	flex-direction: row;
 }
-
+.logo {
+	display: flex;
+	justify-content: flex-start;
+}
 .logo img {
 	width: 30px;
 }
@@ -44,12 +47,18 @@
 .total {
 	font-family: Poppins;
 	font-style: normal;
-	font-weight: normal;
-	font-size: 1.3em;
+	font-weight: bold;
+	font-size: 1em;
 	line-height: 20px;
 	text-align: right;
 	letter-spacing: -0.24px;
 	color: rgba(25, 47, 57, 0.5);
+}
+
+.category {
+	display: flex;
+	justify-items: flex-end;
+	align-content: flex-start;
 }
 .category img {
 	width: 30px;
