--- a/client/src/screens/ReceiptList/ReceiptList.css
+++ b/client/src/screens/ReceiptList/ReceiptList.css
@@ -117,3 +117,15 @@
 	border: 0px solid transparent;
 	text-shadow: 0px 0px 0px transparent;
 }
+
+a {
+	text-decoration: none;
+}
+
+a div {
+	transition: all 0.2s ease-in-out;
+}
+
+a div:hover {
+	transform: scale(1.1);
+}
