--- a/client/src/components/Main/MainContainer.css
+++ b/client/src/components/Main/MainContainer.css
@@ -1,10 +1,17 @@
 .main-container {
-  background-color: #f5f6fa;
-	border-radius: 30px;
-	height: 100vh;
+	background-color: #ffffff;
+	border-radius: 2.6em 2.6em 0 0;
+	height: 80vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	justify-self: flex-end;
+	min-width: 375px;
 }
 
 .main-innercontainer {
-	margin-left: 1em;
-	margin-right: 1em;
+	overflow-x: visible;
+	overflow-y: scroll;
+	padding: 1rem 2rem 0rem 2rem;
+	height: 80vh;
 }
