--- a/client/src/components/Receipt/ReceiptListItem/ReceiptListItem.css
+++ b/client/src/components/Receipt/ReceiptListItem/ReceiptListItem.css
@@ -12,9 +12,10 @@
 		0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
 		0px 2.76726px 2.2138px rgba(0, 0, 0, 0.0196802);
 	border-radius: 12px;
-	margin: 2em 1.5em 2em 1.5em;
 	display: flex;
 	flex-direction: row;
+	margin-bottom: 1em;
+	min-width: 285px;
 }
 .logo {
 	display: flex;
