--- a/client/src/screens/ReceiptBody/ReceiptBody.css
+++ b/client/src/screens/ReceiptBody/ReceiptBody.css
@@ -1,63 +1,26 @@
-.Receipt-Container {
-	background-color: #f5f6fa;
-	border-radius: 30px 30px 0 0;
-	height: 100vh;
-}
-
-.Receipt-Body {
-	margin-left: 1em;
-	margin-right: 1em;
-}
-
 .Company-Details {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .Company-Name {
+	font-family: Poppins;
+	font-size: 1.6rem;
+	font-style: normal;
 	font-weight: bold;
-	margin-bottom: 0;
-	margin-top: 0.8em;
-	color: #3d3232;
 }
 
-.Company-Logo {
-	color: rgb(245, 164, 89);
-	font-weight: bold;
-	margin-bottom: 0;
-	margin-top: 0.8em;
-}
-
-.Time-Container {
-	display: flex;
-	justify-content: space-between;
-	padding: 0;
-	margin-bottom: 0.5em;
+.Category-Logo {
+	width: 30px;
 }
 
 .Timestamp {
-	font-size: xx-small;
-	margin-top: 0%;
-	font-weight: 500;
-	color: #a1a1a1;
-}
-
-.Shop-Icon-Circle {
-	display: inline-block;
-	width: 30px;
-	height: 30px;
-	line-height: 25px;
-	border-radius: 50%;
-	background: #f5f6fa;
-	margin-right: 2em;
-	margin-top: 0;
-	vertical-align: middle;
-	text-align: center;
-	list-style: none;
-}
-
-.Shop-Icon {
-	font-size: 25px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 24px;
 }
 
 .Receipt-Saved-Text {
