--- a/client/src/components/Receipt/PriceAndQR/PriceAndQR.css
+++ b/client/src/components/Receipt/PriceAndQR/PriceAndQR.css
@@ -10,6 +10,10 @@
 	border-radius: 0.5rem;
 	margin-bottom: 1rem;
 	padding: 0.5rem;
+	min-width: 30%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .Total-Title {
@@ -26,7 +30,6 @@
 	font-weight: bold;
 	font-size: 2.4rem;
 	display: flex;
-	align-items: center;
 	text-align: center;
 }
 
