--- a/client/src/screens/ReceiptList/ReceiptList.css
+++ b/client/src/screens/ReceiptList/ReceiptList.css
@@ -15,3 +15,51 @@ a div {
 a div:hover {
 	transform: scale(1.1);
 }
+.searchWrapper {
+	display: flex;
+	background-color: white;
+	border-radius: 25px;
+	align-items: center;
+	transition: all 0.2s ease-in-out;
+	filter: drop-shadow(0px 100px 80px rgba(0, 0, 0, 0.07)),
+		drop-shadow(0px 41.7776px 33.422px rgba(0, 0, 0, 0.0503198)),
+		drop-shadow(0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275)),
+		drop-shadow(0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035)),
+		drop-shadow(0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725)),
+		drop-shadow(0px 2.76726px 2.2138px rgba(0, 0, 0, 0.0196802));
+}
+.searchBar {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 1em;
+}
+
+label a {
+	display: flex;
+	align-items: center;
+}
+div label a img {
+	width: 50px;
+}
+
+#false {
+	height: 50px;
+	border-radius: 200px;
+	border: none;
+	font-size: 1rem;
+	text-align: center;
+	opacity: 0;
+	width: 0px;
+	transition: width 0.5s, opacity 0.2s ease-in;
+}
+
+#true {
+	height: 50px;
+	border-radius: 200px;
+	border: none;
+	font-size: 1rem;
+	text-align: center;
+	width: 166px;
+	opacity: 1;
+	transition: width 0.5s, opacity 0.2s ease-out;
+}
