--- a/client/src/screens/ReceiptList/ReceiptList.css
+++ b/client/src/screens/ReceiptList/ReceiptList.css
@@ -34,15 +34,15 @@ a div:hover {
 	margin-bottom: 1em;
 }
 
-label a {
+label div {
 	display: flex;
 	align-items: center;
 }
-div label a img {
+div label div img {
 	width: 50px;
 }
 
-#false {
+.hidden {
 	height: 50px;
 	border-radius: 200px;
 	border: none;
@@ -53,7 +53,7 @@ div label a img {
 	transition: width 0.5s, opacity 0.2s ease-in;
 }
 
-#true {
+.visible {
 	height: 50px;
 	border-radius: 200px;
 	border: none;
