:lipstic: (⚛️ Frontend) adjust button and css styles

--- a/client/src/components/Receipt/ItemsList/ItemsList.css
+++ b/client/src/components/Receipt/ItemsList/ItemsList.css
@@ -13,7 +13,7 @@ ul li {
 }
 
 .Item-List-Container {
-	max-height: 110px;
+	max-height: 13vh;
 	background: rgba(57, 34, 25, 0.1);
 	border-radius: 0.5rem;
 	margin-bottom: 1rem;
