--- a/client/src/components/PrintComponent/PrintItemsList/PrintItemsList.css
+++ b/client/src/components/PrintComponent/PrintItemsList/PrintItemsList.css
@@ -10,6 +10,8 @@ ul li {
 	font-weight: 600;
 	font-size: 1rem;
 	color: #248cce;
+	margin-left: 0.8rem;
+	margin-right: 0.8rem;
 }
 
 .Print-Item-List-Container {
@@ -18,7 +20,7 @@ ul li {
 	border-radius: 0.5rem;
 	margin-bottom: 1rem;
 	overflow-y: auto;
-	padding: 0.5rem;
+	padding: 1rem;
 }
 
 .Print-Item-List-Container::-webkit-scrollbar {
@@ -38,7 +40,7 @@ ul li {
 	font-family: Poppins;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 1rem;
+	font-size: 1.5rem;
 	line-height: 27px;
 	color: #252b48;
 }
@@ -53,4 +55,5 @@ ul li {
 	margin-bottom: 1em;
 	padding: 0.5em;
 	color: #252b48;
+	font-size: 1.5rem;
 }
