--- a/client/src/components/PrintComponent/PrintPriceAndQR/PrintPriceAndQR.css
+++ b/client/src/components/PrintComponent/PrintPriceAndQR/PrintPriceAndQR.css
@@ -10,7 +10,8 @@
 	border-radius: 0.5rem;
 	margin-bottom: 1rem;
 	padding: 0.5rem;
-	min-width: 30%;
+	min-width: 40%;
+	min-height: 50%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -45,7 +46,6 @@
 	border-radius: 0.5rem;
 	margin-bottom: 1rem;
 	padding: 0.5rem;
-	min-width: 30%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
