:lipstic: (⚛️ Frontend) change bg of button in receiptBody

--- a/client/src/screens/ReceiptBody/ReceiptBody.css
+++ b/client/src/screens/ReceiptBody/ReceiptBody.css
@@ -57,7 +57,7 @@
 }
 
 .Button-Text {
-	background-color: #1fc2c2;
+	background-color: #ddeded;
 	background: linear-gradient(90deg, #23cfcf, #189c9cfc);
 	padding: 0 1.25rem;
 	line-height: 2.125rem;
