--- a/client/src/components/Receipt/ReceiptListItem/ReceiptListItem.css
+++ b/client/src/components/Receipt/ReceiptListItem/ReceiptListItem.css
@@ -2,7 +2,7 @@
 	background-color: #ffffff;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	padding: 1em;
 	box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
@@ -19,29 +19,33 @@
 }
 .logo {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
+	min-width: 30px;
 }
 .logo img {
 	width: 30px;
+	text-align: right;
 }
 
 .merchantName {
 	font-family: Poppins;
-	font-style: normal;
-	font-weight: normal;
 	font-size: 1em;
 	line-height: 18px;
 	letter-spacing: -1px;
+	min-width: 80px;
+	max-width: 380px;
+	text-align: center;
 	color: rgba(60, 60, 67, 0.75);
 }
 
 .date {
 	font-family: Poppins;
-	font-style: normal;
-	font-weight: normal;
 	font-size: 0.8em;
 	line-height: 20px;
 	letter-spacing: -0.24px;
+	max-width: 65px;
+	min-width: 65px;
+	text-align: center;
 	color: rgba(25, 47, 57, 0.5);
 }
 
