--- a/client/src/screens/ReceiptBody/ReceiptBody.css
+++ b/client/src/screens/ReceiptBody/ReceiptBody.css
@@ -57,7 +57,7 @@
 }
 
 .Button-Text {
-	background-color: #ddeded;
+	background-color: #1fc2c2;
 	background: linear-gradient(90deg, #23cfcf, #189c9cfc);
 	padding: 0 1.25rem;
 	line-height: 2.125rem;
@@ -71,8 +71,12 @@
 	cursor: pointer;
 	margin-bottom: 1em;
 
-	box-shadow: rgb(38, 57, 77) 0px 20px 20px -10px;
-
+	box-shadow: 0 3.1px 3.1px -5px rgba(0, 0, 0, 0.043),
+		0 7.4px 7.5px -5px rgba(0, 0, 0, 0.062),
+		0 13.9px 14.1px -5px rgba(0, 0, 0, 0.077),
+		0 24.8px 25.2px -5px rgba(0, 0, 0, 0.092),
+		0 46.4px 47.2px -5px rgba(0, 0, 0, 0.111),
+		0 111px 113px -5px rgba(0, 0, 0, 0.15);
 	border: 0px solid transparent;
 	text-shadow: 0px 0px 0px transparent;
 	letter-spacing: 0.6px;
