--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,12 +1,26 @@
 .header {
 	text-align: center;
 	font-weight: 500;
-	margin-top: 3em;
+	margin-top: 1rem;
 	margin-bottom: 3em;
 	position: static;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
+	display: flex;
+	flex-direction: column;
 }
 .header img {
 	width: 45%;
+}
+
+.logout {
+	display: flex;
+	align-self: flex-end;
+	justify-self: flex-end;
+	margin-right: 1rem;
+	overflow: visible;
+	text-decoration: none;
+	min-height: 3rem;
+	color: seashell;
+	text-shadow: 2px 2px 7px rgba(1, 2, 120, 0.63);
 }
