--- a/client/src/components/Receipt/PriceAndQR/PriceAndQR.css
+++ b/client/src/components/Receipt/PriceAndQR/PriceAndQR.css
@@ -10,7 +10,7 @@
 	border-radius: 0.5rem;
 	margin-bottom: 1rem;
 	padding: 0.5rem;
-	min-width: 30%;
+	min-width: 42%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -38,20 +38,21 @@
 	justify-content: space-around;
 	font-family: Avenir;
 	font-size: 0.8rem;
+	line-height: 50%;
+	margin-bottom: 0.1rem;
 }
 
 .QR-Container {
 	background: rgba(25, 47, 57, 0.1);
 	border-radius: 0.5rem;
 	margin-bottom: 1rem;
-	padding: 0.5rem;
-	min-width: 30%;
+	padding: 0.2rem;
+	min-width: 42%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
 }
 
-.QR-svg img {
-	width: 72px;
+.QR-svg {
 }
