--- a/client/src/components/User/Signup/Form.css
+++ b/client/src/components/User/Signup/Form.css
@@ -1,3 +1,11 @@
+.inner-container::-webkit-scrollbar {
+	display: none;
+}
+
+.inner-container {
+	-ms-overflow-style: none;
+}
+
 .inner-container {
 	margin-bottom: 0;
 	overflow-y: hidden;
