--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -14,32 +14,14 @@
 	width: 45%;
 }
 
-.link {
-	opacity: 0.7;
+.logout {
+	display: flex;
 	align-self: flex-end;
-	background-color: #ddeded;
-	background: linear-gradient(90deg, #23cfcf, #189c9cfc);
-	padding: 0 1.25rem;
-	line-height: 2.125rem;
-	font-size: 0.83rem;
-	font-weight: 400;
-	text-align: center;
-	margin: 0.4em;
-	color: white;
-	min-width: 6em;
-	border-radius: 30px;
-	cursor: pointer;
-	margin-bottom: 1em;
-
-	box-shadow: 0 3.1px 3.1px -5px rgba(0, 0, 0, 0.043),
-		0 7.4px 7.5px -5px rgba(0, 0, 0, 0.062),
-		0 13.9px 14.1px -5px rgba(0, 0, 0, 0.077),
-		0 24.8px 25.2px -5px rgba(0, 0, 0, 0.092),
-		0 46.4px 47.2px -5px rgba(0, 0, 0, 0.111),
-		0 111px 113px -5px rgba(0, 0, 0, 0.15);
-
-	border: 0px solid transparent;
-	text-shadow: 0px 0px 0px transparent;
-	letter-spacing: 0.6px;
-	font-weight: 500;
+	justify-self: flex-end;
+	margin-right: 1rem;
+	overflow: visible;
+	text-decoration: none;
+	min-height: 3rem;
+	color: seashell;
+	text-shadow: 2px 2px 7px rgba(1, 2, 120, 0.63);
 }
